   Added Documentation generation tools for generating Axon and Kamaelia
   reference documentation - see their docstrings for more information.

   Enhanced Kamaelia.Support.Data.Repository to support fuller introspection
   of components, prefabs, classes and methods in the repository, including
   their arguments and docuentation.

0.5.1

   Shutdown handling improved for internet components: CSA, TCPClient,
   and TCPServer. Shutting down capability added to the Selector component.

   Documentation improved for DVB components, and parsing added for date and
   time DVB SI data.

   Documentation added to RawAudioMixer, and pymedia audio components.

   NEW EXAMPLES:

   OPEN GL:
    * Stub test code from the OpenGL components have been separated out as
      lots of mini examples:

      Moved Tools/Whiteboard/Tokenisation.py into
         Kamaelia/Util/Tokenisation/Simple.py

0.5.0

   Kamaelia 0.5.0 adds a large number of new components, many of which have
   been developed by students participating in Google's Summer Of Code 2006
   Programme. There are many new examples demonstrating these new features.

   Additionsfrom SoC 2006:
    * Modular http web server and client
    * BitTorrent client
    * OpenGL display components

   Other additions include:   
    * PyMedia Audio IO and codec access
    * Speex audio codec
    * Audio mixing and filtering
    * Improved Digital TV handling


   NEW EXAMPLES:

   HTTP spidering:
    * Examples/SoC2006/RJL/HTTPSpider

   BitTorrent:
    * Examples/SoC2006/RJL/TorrentGUI
    * Examples/SoC2006/RJL/TorrentSeeder

   BitTorrent based peer to peer streaming:
    * Examples/SoC2006/RJL/P2PStreamPeer
    * Examples/SoC2006/RJL/P2PStreamSeed

   OpenGL checkers board:
    * Examples/SoC2006/THF/Checkers

   OpenGL BitTorrent GUI:
    * Examples/SoC2006/THF/TorrentOpenGLGUI

   DVB Digital TV timeshifting tools:
    * Examples/DVB_Systems/RecordNamedChanel.py
    * Examples/DVB_Systems/PersonalVideoRecorder.py

   